# call-status

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
client/: call-status-client.service  deploy.sh  requirements.txt  status_client.py
server/: api_server.py  call-status-server.service  deploy.sh
tests/: __init__.py
tests/client/: test_status_client.py
tests/server/: test_api_server.py
